# 25a-emb-aps-2-arcadestick

./: CMakeLists.txt  README.md
env/: pyvenv.cfg
main/: CMakeLists.txt  adc_processing.c  adc_processing.h  bluetooth.c  bluetooth.h  button.c  button.h  common.h  copiaParaDEPOIS  fsr.c  fsr.h  main.c  novo.c  pot.c  pot.h
old/: hc06_task.h
previous/: hc06_task.c
python/: main.py
python/env/: pyvenv.cfg
